Fix admin template on mobile

--- a/core/uri/css/app.css/css/style.css
+++ b/core/uri/css/app.css/css/style.css
@@ -64,9 +64,9 @@ body { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; 
 
 .logged-in.admin body { margin-right: 30px; }
 
-.admin-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; font-family: sans-serif; color: #333333; padding: 20px; }
+.admin-wrapper { font-family: sans-serif; color: #333333; padding: 20px; }
 
-@media (min-width: 1000px) { .admin-wrapper { padding: 0; } }
+@media (min-width: 1000px) { .admin-wrapper { display: -webkit-box; display: -ms-flexbox; display: flex; padding: 0; } }
 
 .admin-wrapper h1 { font-family: sans-serif; font-size: 28px; font-weight: normal; padding: 30px 0; margin: 0; }
 
